--- a/.gitignore
+++ b/.gitignore
@@ -10,32 +10,96 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
-/coverage
+# ====================
+# Node/Express Backend
+# ====================
 
-# next.js
-/.next/
-/out/
+# Dependency directories
+node_modules/
+.next/
+.pnp/
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+bower_components/
 
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
+pnpm-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
+# Diagnostic reports
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage
+coverage/
+.nyc_output/
+
+# Build output
+build/
+dist/
+build/Release
+
+# Cache
+.npm/
+.eslintcache
+
+# Environment variables and secrets
+.env
 .env*
 
-# vercel
-.vercel
+# ====================
+# React Frontend
+# ====================
+
+# Production build
+build/
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# vercel
+.vercel
+
+# Cache
+.cache/
+
+# ====================
+# VSCode Settings
+# ====================
+.vscode/*
+!.vscode/extensions.json
+!.vscode/launch.json
+!.vscode/tasks.json
+!.vscode/settings.json
+.vscode-test/
+*.code-workspace
+
+# ====================
+# Editor & OS Files
+# ====================
+
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
+
+# Vim
+
+# JetBrains IDEs
+.idea/
+*.iml
+/.vscode
